create nav layout

--- a/index.html
+++ b/index.html
@@ -6,12 +6,42 @@
         <!-- style -->
         <link rel="stylesheet" href="Styles/style.css">
         <link rel="stylesheet" href="Styles/responsive.css">
-        <title>Document</title>
+        <title></title>
     </head>
     <body>
         <!-- header start -->
         <header>
-
+            <!-- offer -->
+            <section class="offer-container">
+                <h2>SALE ALERT: 30% Off Sitewide | Code:MEMORIAL30 - 20% Off
+                    Fine |Code:Fine20</h2>
+            </section>
+            <!-- navbar -->
+            <nav class="nav-lg">
+                <!-- left -->
+                <div>
+                    <ul>
+                        <li>New</li>
+                        <li>Shop By</li>
+                        <li>Best Seller</li>
+                        <li>Bridal
+                        </li>
+                        <li>Clearance</li>
+                    </ul>
+                </div>
+                <!-- middle -->
+                <div>
+                <h2 class="logo-lg">JAMES MICHELLE</h2>
+                </div>
+                <!-- right -->
+                <div>
+                    <ul>
+                       <li>Search</li>
+                       <li>Account</li>
+                       <li>Cart</li>
+                    </ul>
+                </div>
+            </nav>
         </header>
         <!-- header end -->
         <!-- Main Start -->
